yaml-testing/30-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cherwell-api-test
    group: cherwell-api-test
  name: cherwell-api-test
  namespace: maximus-it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cherwell-api-test
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cherwell-api-test
    spec:
      containers:
      - image: docker.artifactory.mars.pcf-maximus.com/maximus-it/cherwell-api-test:1.0.3
        imagePullPolicy: Always
        name: cherwell-api-test
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
