yaml-testing/40-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    group: cherwell-api-test
  name: cherwell-api-test
  namespace: maximus-it
  selfLink: /api/v1/namespaces/maximus-it/services/cherwell-api-test
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cherwell-api-test
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
